# np-data-age-analysis

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: dag-task-2.prec.yaml  dag-task-3.prec.yaml  dag-task.prec.yaml
include/: dag.hpp  data_age_analysis.hpp  edge.hpp  index_set.hpp  interval.hpp  io.hpp  jobs.hpp  precedence.hpp  problem.hpp  task.hpp  time.hpp
include/uni/: iip.hpp  por_criterion.hpp  por_space.hpp  reduction_set.hpp  space.hpp  state.hpp
lib/include/: csvfile.hpp
lib/src/: OptionParser.cpp
src/: run_analysis.cpp
